feat(alerts): add status update events and enhance query filters for alerts